syntax = "proto3";

package message;

option go_package = "messagepb";

message SlackMessage {
  string id = 1;
  string subject = 6;
  string body = 7;
}

message EmailMessage {
  string id = 1;
  string to = 4;
  string from = 5;
  string subject = 6;
  string body = 7;
}

message CreateSlackMessageRequest {
  SlackMessage message = 1;
}

message CreateSlackMessageResponse {
  SlackMessage message = 1;
}

message CreateEmailMessageRequest {
  EmailMessage message = 1;
}

message CreateEmailMessageResponse {
  EmailMessage message = 1;
}

// message ReadMessageRequest {
//   string message_id = 1;
// }
//
// message ReadMessageResponse {
//   Message message = 1;
// }
//
// message ListMessageRequest{}
//
// message ListMessageResponse{
//   Message message = 1;
// }

service MessageService {
  rpc CreateEmailMessage (CreateEmailMessageRequest) returns (CreateEmailMessageResponse);
  rpc CreateSlackMessage (CreateSlackMessageRequest) returns (CreateSlackMessageResponse);
  // rpc ReadMessage (ReadMessageRequest) returns (ReadMessageResponse);
  // rpc ListMessage (ListMessageRequest) returns (stream ListMessageResponse);
}
